API fully documented with Swagger
